--- a/sextant/src/App.css
+++ b/sextant/src/App.css
@@ -28,6 +28,46 @@
   color: #61dafb;
 }
 
+.Banner {
+  margin: 0.5vw;
+  padding: 0vw 2vw 0vw 2vw;
+  text-align: center;
+  font-weight: bold;
+  font-size: 1.75vw;
+  color: #002933;
+  background-color: #80e5ff;
+  border: 0.25vw solid #005266;
+  border-radius: 2vw;
+}
+
+.Exhibit {
+  float: left;
+  margin: 0.5vw;
+  padding: 0vw 2vw 0vw 2vw;
+  text-align: center;
+  color: #002933;
+  background-color: #00b8e6;
+  border: 0.25vw solid #005266;
+  border-radius: 2vw;
+}
+
+.ExhibitHeading {
+  font-weight: bold;
+  font-size: 1.75vw;
+}
+
+.ExhibitContent {
+  margin: 0.5vw;
+  padding: 1vw 1vw 1vw 1vw;
+  text-align: center;
+  font-weight: bold;
+  font-size: 1.75vw;
+  color: #002933;
+  background-color: #80e5ff;
+  border: 0.25vw solid #005266;
+  border-radius: 2vw;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
